minikube/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: 3.80.160.124   # your VM public IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web       # your web service
            port:
              number: 8080
